<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VegBurgerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".BurgerActivity">

        <LinearLayout
            android:id="@+id/burgerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/breadTop"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/burger_top"
                    android:contentDescription="@string/top_burger" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/seedOne"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:contentDescription="@string/seed"
                    android:rotation="-20" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/seedTwo"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:contentDescription="@string/seed"
                    android:rotation="10" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/seedThree"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="99dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:contentDescription="@string/seed"
                    android:rotation="10" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/seedFour"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="152dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:contentDescription="@string/seed"
                    android:rotation="-40" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/seedFive"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="250dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:contentDescription="@string/seed"
                    android:rotation="-50" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/seedSix"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="300dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:contentDescription="@string/seed"
                    android:rotation="-60" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/seedSeven"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="360dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/seeds"
                    android:contentDescription="@string/seed"
                    android:rotation="-60" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/saladLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/baconLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/cheeseLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/pattyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/burger_bottom"
                android:contentDescription="@string/bottom_burger" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prefLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/burgerLayout"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="#CF8F2E"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_price"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bun_price"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/removeSalad"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="#8F5E1E"
                    app:cardCornerRadius="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/remove"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/salad"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/addSalad"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="#8F5E1E"
                    app:cardCornerRadius="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/removeBacon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="#8F5E1E"
                    app:cardCornerRadius="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/remove"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/veg_bacon"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/addBacon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="#8F5E1E"
                    app:cardCornerRadius="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/removeCheese"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="#8F5E1E"
                    app:cardCornerRadius="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/remove"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/cheese"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/addCheese"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="#8F5E1E"
                    app:cardCornerRadius="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/removePatty"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="#8F5E1E"
                    app:cardCornerRadius="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/remove"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/patty"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/addPatty"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="#8F5E1E"
                    app:cardCornerRadius="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <Button
                android:id="@+id/orderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#C7C6C6"
                android:text="@string/order"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/prefLayout" />
    </RelativeLayout>
</ScrollView>